--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "lint": "eslint --ext .js,.vue --ignore-path .eslintignore ."
   },
   "lint-staged": {
     "*.{js,vue}": "eslint"
@@ -20,8 +20,9 @@
     }
   },
   "dependencies": {
-    "flipclock": "0.10.8",
-    "nuxt": "2.11.0"
+    "date-fns": "^2.8.1",
+    "nuxt": "2.11.0",
+    "vue2-flip-countdown": "0.9.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "1.1.2",
